tools/qmlcachegen/qmlcachegen.cpp
@@ -47,10 +47,8 @@
 
 using namespace QQmlJS;
 
-int filterResourceFile(const QString &input, const QString &output);
-bool generateLoader(const QStringList &compiledFiles, const QStringList &retainedFiles,
-                    const QString &output, const QStringList &resourceFileMappings,
-                    QString *errorString);
+bool generateLoader(const QStringList &compiledFiles, const QString &output,
+                    const QStringList &resourceFileMappings, QString *errorString);
 QString symbolNamespaceForPath(const QString &relativePath);
 
 QSet<QString> illegalNames;
@@ -419,14 +417,10 @@ int main(int argc, char **argv)
     parser.addHelpOption();
     parser.addVersionOption();
 
-    QCommandLineOption filterResourceFileOption(QStringLiteral("filter-resource-file"), QCoreApplication::translate("main", "Filter out QML/JS files from a resource file that can be cached ahead of time instead"));
-    parser.addOption(filterResourceFileOption);
     QCommandLineOption resourceFileMappingOption(QStringLiteral("resource-file-mapping"), QCoreApplication::translate("main", "Path from original resource file to new one"), QCoreApplication::translate("main", "old-name:new-name"));
     parser.addOption(resourceFileMappingOption);
     QCommandLineOption resourceOption(QStringLiteral("resource"), QCoreApplication::translate("main", "Qt resource file that might later contain one of the compiled files"), QCoreApplication::translate("main", "resource-file-name"));
     parser.addOption(resourceOption);
-    QCommandLineOption retainOption(QStringLiteral("retain"), QCoreApplication::translate("main", "Qt resource file the contents of which should not be replaced by empty stubs"), QCoreApplication::translate("main", "resource-file-name"));
-    parser.addOption(retainOption);
     QCommandLineOption resourcePathOption(QStringLiteral("resource-path"), QCoreApplication::translate("main", "Qt resource file path corresponding to the file being compiled"), QCoreApplication::translate("main", "resource-path"));
     parser.addOption(resourcePathOption);
 
@@ -468,18 +462,11 @@ int main(int argc, char **argv)
     if (outputFileName.isEmpty())
         outputFileName = inputFile + QLatin1Char('c');
 
-    if (parser.isSet(filterResourceFileOption)) {
-        return filterResourceFile(inputFile, outputFileName);
-    }
-
     if (target == GenerateLoader) {
         ResourceFileMapper mapper(sources);
-        ResourceFileMapper retain(parser.values(retainOption));
 
         Error error;
-        QStringList retainedFiles = retain.qmlCompilerFiles();
-        std::sort(retainedFiles.begin(), retainedFiles.end());
-        if (!generateLoader(mapper.qmlCompilerFiles(), retainedFiles, outputFileName,
+        if (!generateLoader(mapper.qmlCompilerFiles(), outputFileName,
                             parser.values(resourceFileMappingOption), &error.message)) {
             error.augment(QLatin1String("Error generating loader stub: ")).print();
             return EXIT_FAILURE;
